--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,7 +63,7 @@ jobs:
             v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}") 
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
             print(f"version0={str(v0)}", file=fp)
-            print(f"version1={str(v1}", file=fp)
+            print(f"version1={str(v1)}", file=fp)
         shell: python
 
       - name: Set up Git
