--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,27 +53,59 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Get version
-        id: get_version
+      - name: Get versions
+        id: get_versions
         run: |
           import os
-          from packaging import version
           with open("./laktory/_version.py") as fp:
-            v0 = fp.read().split("=")[-1].strip().replace('"', '')
-            v0 = version.parse(v0)
-            v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}") 
+            v = fp.read().split("=")[-1].strip().replace('"', '')
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-            print(f"version0={str(v0)}", file=fp)
-            print(f"Releasing laktory {v0}")
-            print(f"version1={str(v1)}", file=fp)
-            print(f"Preparing laktory {v1}")
+            print(f"version={v}", file=fp)
+          print(f"Releasing laktory {v}")
         shell: python
 
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-        run: git tag test-v${{ steps.get_version.outputs.version0 }}
+        run: git tag test2-v${{ steps.get_versions.outputs.version }}
 
       - name: Push release tag
-        run: git push origin test-v${{ steps.get_version.outputs.version0 }}
+        run: git push origin test2-v${{ steps.get_versions.outputs.version }}
+
+
+  bump:
+    runs-on: ubuntu-latest
+    needs: tag
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Bump version
+        run: |
+          import os
+          from packaging import version
+          with open("./laktory/_version.py") as fp:
+            v0 = fp.read().split("=")[-1].strip().replace('"', '')
+            v0 = version.parse(v0)
+            v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
+          with open("./laktory/_version.py", "w") as fp:
+            fp.write('version = "{v1}"')
+          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+            print(f"version={str(v1)}", file=fp)          
+          print(f"Bumping laktory to {v}")
+        shell: python
+
+      - name: Set up Git
+        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+
+      - name: Commit changes
+        run: |
+          git checkout -b version-bump-v${{ steps.get_versions.outputs.version }}
+          git add ./laktory/_version.py
+          git commit -m "version bump [skip ci]"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          branch: version-bump-v${{ steps.get_versions.outputs.version }}
