--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
             fp.write('version = "{v1}"')
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
             print(f"version={str(v1)}", file=fp)          
-          print(f"Bumping laktory to {v}")
+          print(f"Bumping laktory to {v1}")
         shell: python
 
       - name: Set up Git
