--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,8 @@ jobs:
 
 
   bump:
+    permissions:
+      contents: write  # required to push new branch
     runs-on: ubuntu-latest
     needs: tag
     steps:
