--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -112,3 +112,8 @@ jobs:
         uses: ad-m/github-push-action@v0.8.0
         with:
           branch: version-bump-v${{ steps.bump_version.outputs.version }}
+
+      - name: Create pull request
+        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
