--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,8 +75,10 @@ jobs:
 
 
   bump:
+#    permissions:
     permissions:
       contents: write  # required to push new branch
+      pull-requests: write
     runs-on: ubuntu-latest
     needs: tag
     steps:
