--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,10 +75,10 @@ jobs:
 
 
   bump:
+    permissions: write-all
 #    permissions:
-    permissions:
-      contents: write  # required to push new branch
-      pull-requests: write
+#      contents: write  # required to push new branch
+#      pull-requests: write
     runs-on: ubuntu-latest
     needs: tag
     steps:
@@ -117,5 +117,5 @@ jobs:
 
       - name: Create pull request
         run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        env:
+#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
