--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -78,7 +78,7 @@ jobs:
     permissions: write-all
 #    permissions:
 #      contents: write  # required to push new branch
-#      pull-requests: write
+#      pull-requests: write  #
     runs-on: ubuntu-latest
     needs: tag
     steps:
