--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,43 +35,34 @@ jobs:
 #          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
 #          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
-  tag:
-    permissions:
-#      actions: write
-#      checks: write
-      contents: write  # required to push release tag
-#      deployments: write
-#      id-token: write
-#      issues: write
-#      discussions: write
-#      packages: write
-#      pages: write
-#      pull-requests: write
-    runs-on: ubuntu-latest
-    needs: publish
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Get versions
-        id: get_version
-        run: |
-          import os
-          with open("./laktory/_version.py") as fp:
-            v = fp.read().split("=")[-1].strip().replace('"', '')
-          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-            print(f"version={v}", file=fp)
-          print(f"Releasing laktory {v}")
-        shell: python
-
-      - name: Set up Git
-        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
-
-      - name: Create release tag
-        run: git tag test2-v${{ steps.get_version.outputs.version }}
-
-      - name: Push release tag
-        run: git push origin test2-v${{ steps.get_version.outputs.version }}
+#  tag:
+#    permissions:
+#      contents: write  # required to push release tag
+#    runs-on: ubuntu-latest
+#    needs: publish
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Get versions
+#        id: get_version
+#        run: |
+#          import os
+#          with open("./laktory/_version.py") as fp:
+#            v = fp.read().split("=")[-1].strip().replace('"', '')
+#          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+#            print(f"version={v}", file=fp)
+#          print(f"Releasing laktory {v}")
+#        shell: python
+#
+#      - name: Set up Git
+#        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+#
+#      - name: Create release tag
+#        run: git tag test2-v${{ steps.get_version.outputs.version }}
+#
+#      - name: Push release tag
+#        run: git push origin test2-v${{ steps.get_version.outputs.version }}
 
 
   bump:
@@ -80,7 +71,7 @@ jobs:
 #      contents: write  # required to push new branch
 #      pull-requests: write  #
     runs-on: ubuntu-latest
-    needs: tag
+#    needs: tag
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
