--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
             v0 = version.parse(v0)
             v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
           with open("./laktory/_version.py", "w") as fp:
-            fp.write('version = "{v1}"')
+            fp.write(f'VERSION = "{v1}"')
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
             print(f"version={str(v1)}", file=fp)          
           print(f"Bumping laktory to {v1}")
@@ -95,16 +95,16 @@ jobs:
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
-#      - name: Commit changes
-#        run: |
-#          git checkout -b version-bump-v${{ steps.bump_version.outputs.version }}
-#          git add ./laktory/_version.py
-#          git commit -m "version bump [skip ci]"
-#
-#      - name: Push changes
-#        uses: ad-m/github-push-action@v0.8.0
-#        with:
-#          branch: version-bump-v${{ steps.bump_version.outputs.version }}
+      - name: Commit changes
+        run: |
+          git checkout -b version-bump-v${{ steps.bump_version.outputs.version }}
+          git add ./laktory/_version.py
+          git commit -m "version bump [skip ci]"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          branch: version-bump-v${{ steps.bump_version.outputs.version }}
 
       - name: Create pull request
         run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
