--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,34 +35,34 @@ jobs:
 #          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
 #          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
-#  tag:
-#    permissions:
-#      contents: write  # required to push release tag
-#    runs-on: ubuntu-latest
-#    needs: publish
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: Get versions
-#        id: get_version
-#        run: |
-#          import os
-#          with open("./laktory/_version.py") as fp:
-#            v = fp.read().split("=")[-1].strip().replace('"', '')
-#          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-#            print(f"version={v}", file=fp)
-#          print(f"Releasing laktory {v}")
-#        shell: python
-#
-#      - name: Set up Git
-#        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
-#
-#      - name: Create release tag
-#        run: git tag test2-v${{ steps.get_version.outputs.version }}
-#
-#      - name: Push release tag
-#        run: git push origin test2-v${{ steps.get_version.outputs.version }}
+  tag:
+    permissions:
+      contents: write  # required to push release tag
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Get versions
+        id: get_version
+        run: |
+          import os
+          with open("./laktory/_version.py") as fp:
+            v = fp.read().split("=")[-1].strip().replace('"', '')
+          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+            print(f"version={v}", file=fp)
+          print(f"Releasing laktory {v}")
+        shell: python
+
+      - name: Set up Git
+        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+
+      - name: Create release tag
+        run: git tag test-v${{ steps.get_version.outputs.version }}
+
+      - name: Push release tag
+        run: git push origin test-v${{ steps.get_version.outputs.version }}
 
 
   bump:
@@ -85,8 +85,8 @@ jobs:
             v0 = fp.read().split("=")[-1].strip().replace('"', '')
             v0 = version.parse(v0)
             v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
-          with open("./laktory/_version.py", "w") as fp:
-            fp.write(f'VERSION = "{v1}"')
+          # with open("./laktory/_version.py", "w") as fp:
+          #   fp.write(f'VERSION = "{v1}"')
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
             print(f"version={str(v1)}", file=fp)          
           print(f"Bumping laktory to {v1}")
@@ -108,5 +108,15 @@ jobs:
 
       - name: Create pull request
         run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Approve pull request
+        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge pull request
+        run: gh pr merge --auto --merge --delete-branch
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
