--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,12 +66,11 @@ jobs:
 
 
   bump:
-    permissions: write-all
-#    permissions:
-#      contents: write  # required to push new branch
-#      pull-requests: write  #
+    permissions:
+      contents: write  # required to push new branch
+      pull-requests: write  # required to create pull-request
     runs-on: ubuntu-latest
-#    needs: tag
+    needs: tag
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
