--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,17 +106,17 @@ jobs:
           branch: version-bump-v${{ steps.bump_version.outputs.version }}
 
       - name: Create pull request
-        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump" --no-approve
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Git
-        run: git config --global user.email "okubot-approver@okube.ai" && git config --global user.name "Okube Git Actions Approver bot"
+#      - name: Set up Git
+#        run: git config --global user.email "okubot-approver@okube.ai" && git config --global user.name "Okube Git Actions Approver bot"
 
-      - name: Approve pull request
-        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Approve pull request
+#        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
+#        env:
+#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Merge pull request
         run: gh pr merge --auto --merge --delete-branch
