--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,6 +119,6 @@ jobs:
 #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Merge pull request
-        run: gh pr merge --auto --merge --delete-branch
+        run: gh pr merge --auto --squash --delete-branch version-bump-v${{ steps.bump_version.outputs.version }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
