--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,11 +111,11 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
 
-#      # TODO: Setup user for specifically approving PR
-#      - name: Approve pull request
-#        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
-#        env:
-##          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
+      # TODO: Setup user for specifically approving PR
+      - name: Approve pull request
+        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
+        env:
+          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
 #          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 #      - name: Merge pull request
