--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Approve pull request
         run: gh pr review --approve --body "Automatically approved by GitHub Actions"
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 #          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
 
 #      - name: Merge pull request
