--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,34 +35,34 @@ jobs:
 #          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
 #          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
-#  tag:
-#    permissions:
-#      contents: write  # required to push release tag
-#    runs-on: ubuntu-latest
-#    needs: publish
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
-#
-#      - name: Get versions
-#        id: get_version
-#        run: |
-#          import os
-#          with open("./laktory/_version.py") as fp:
-#            v = fp.read().split("=")[-1].strip().replace('"', '')
-#          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-#            print(f"version={v}", file=fp)
-#          print(f"Releasing laktory {v}")
-#        shell: python
-#
-#      - name: Set up Git
-#        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
-#
-#      - name: Create release tag
-#        run: git tag test-v${{ steps.get_version.outputs.version }}
-#
-#      - name: Push release tag
-#        run: git push origin test-v${{ steps.get_version.outputs.version }}
+  tag:
+    permissions:
+      contents: write  # required to push release tag
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Get versions
+        id: get_version
+        run: |
+          import os
+          with open("./laktory/_version.py") as fp:
+            v = fp.read().split("=")[-1].strip().replace('"', '')
+          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+            print(f"version={v}", file=fp)
+          print(f"Releasing laktory {v}")
+        shell: python
+
+      - name: Set up Git
+        run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
+
+      - name: Create release tag
+        run: git tag test-v${{ steps.get_version.outputs.version }}
+
+      - name: Push release tag
+        run: git push origin test-v${{ steps.get_version.outputs.version }}
 
 
   bump:
@@ -92,7 +92,7 @@ jobs:
         shell: python
 
       - name: Set up Git
-        run: git config --global user.email "okubot@okube.ai" && git config --global user.name "Okube Git Actions bot"
+        run: git config --global user.email "okubot@okube.ai" && git config --global user.name "okube-git-bot"
 
       - name: Commit changes
         run: |
@@ -105,20 +105,20 @@ jobs:
         with:
           branch: version-bump-v${{ steps.bump_version.outputs.version }}
 
+      # PR creation can't use secrets.GITHUB_TOKEN as it will prevent triggering
+      # other workflows.
+      # TODO: Setup git user for specifically creating PR
       - name: Create pull request
         run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
         env:
+          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
+
+      - name: Approve pull request
+        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
+        env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-#      # TODO: Setup user for specifically approving PR
-#      - name: Approve pull request
-#        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
-#        env:
-#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
-
-#      - name: Merge pull request
-#        run: gh pr merge --auto --squash --delete-branch version-bump-v${{ steps.bump_version.outputs.version }}
-#        env:
-#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Merge pull request
+        run: gh pr merge --auto --squash --delete-branch version-bump-v${{ steps.bump_version.outputs.version }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
