--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,32 +36,89 @@ jobs:
 #          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
   tag:
-    permissions: # write-all
-#      actions: write
-#      checks: read|write|none
-#      contents: read|write|none
-#      deployments: read|write|none
-#      id-token: read|write|none
-      issues: write
-      discussions: write
-      packages: write
-      pages: write
-      pull-requests: write
+    permissions:
+      contents: write  # required to push release tag
     runs-on: ubuntu-latest
     needs: publish
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Get versions
+        id: get_version
+        run: |
+          import os
+          with open("./laktory/_version.py") as fp:
+            v = fp.read().split("=")[-1].strip().replace('"', '')
+          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+            print(f"version={v}", file=fp)
+          print(f"Releasing laktory {v}")
+        shell: python
+
       - name: Set up Git
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-#        run: git tag v${{ steps.increment_version.outputs.new_version }}
-        run: git tag test_tag1
+        run: git tag test-v${{ steps.get_version.outputs.version }}
 
       - name: Push release tag
-#        run: git push origin v${{ steps.increment_version.outputs.new_version }}
-        run: git push origin test_tag0
+        run: git push origin test-v${{ steps.get_version.outputs.version }}
 
 
+  bump:
+    permissions:
+      contents: write  # required to push new branch
+      pull-requests: write  # required to create pull-request
+    runs-on: ubuntu-latest
+#    needs: tag
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Bump version
+        id: bump_version
+        run: |
+          import os
+          from packaging import version
+          with open("./laktory/_version.py") as fp:
+            v0 = fp.read().split("=")[-1].strip().replace('"', '')
+            v0 = version.parse(v0)
+            v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
+          with open("./laktory/_version.py", "w") as fp:
+            fp.write(f'VERSION = "{v0}" # test')
+          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
+            print(f"version={str(v1)}", file=fp)
+          print(f"Bumping laktory to {v1}")
+        shell: python
+
+      - name: Set up Git
+        run: git config --global user.email "okubot@okube.ai" && git config --global user.name "okube-git-bot"
+
+      - name: Commit changes
+        run: |
+          git checkout -b version-bump-v${{ steps.bump_version.outputs.version }}
+          git add ./laktory/_version.py
+          git commit -m "version bump"
+
+      - name: Push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          branch: version-bump-v${{ steps.bump_version.outputs.version }}
+
+      # PR creation can't use secrets.GITHUB_TOKEN as it will prevent triggering
+      # other workflows.
+      # TODO: Setup git user for specifically creating PR
+      - name: Create pull request
+        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        env:
+          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
+
+      - name: Approve pull request
+        run: gh pr review --approve --body "Automatically approved by GitHub Actions"
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Merge pull request
+        run: gh pr merge --auto --squash --delete-branch version-bump-v${{ steps.bump_version.outputs.version }}
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
