--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       contents: write  # required to push new branch
       pull-requests: write  # required to create pull-request
     runs-on: ubuntu-latest
-#    needs: tag
+    needs: tag
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -85,7 +85,7 @@ jobs:
             v0 = version.parse(v0)
             v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
           with open("./laktory/_version.py", "w") as fp:
-            fp.write(f'VERSION = "{v0}" # test')
+            fp.write(f'VERSION = "{v0}" # test2')
           with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
             print(f"version={str(v1)}", file=fp)
           print(f"Bumping laktory to {v1}")
@@ -109,7 +109,7 @@ jobs:
       # other workflows.
       # TODO: Setup git user for specifically creating PR
       - name: Create pull request
-        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "Version Bump ${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "version-bump-${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
         env:
           GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
 
@@ -119,6 +119,6 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Merge pull request
-        run: gh pr merge --auto --squash --delete-branch version-bump-v${{ steps.bump_version.outputs.version }}
+        run: gh pr merge --auto --squash --delete-branch
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
