--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,9 +117,9 @@ jobs:
         run: gh pr review --approve --body "Automatically approved by GitHub Actions"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # TODO: Review why branch is not deleted
-      - name: Merge pull request
-        run: gh pr merge --auto --squash --delete-branch
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#
+#      # TODO: Review why branch is not deleted
+#      - name: Merge pull request
+#        run: gh pr merge --auto --squash --delete-branch
+#        env:
+#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
