--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    if: !contains("version-bump, github.event.pull_request.labels)
+    if: !contains("version-bump", github.event.pull_request.labels)
     strategy:
       fail-fast: false
       matrix:
