--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    if: !contains(github.event.pull_request.labels, "version-bump")
+#    if: !contains(github.event.pull_request.labels, "version-bump")
+    if: false
     strategy:
       fail-fast: false
       matrix:
