--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Run tests
         run: make dev test
-        if: contains(github.event.pull_request.labels, "version-bump")
+        if: !contains(github.event.pull_request.labels, 'version-bump')
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
