--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Run tests
         run: make dev test
-        if: contains(github.event.pull_request.labels.*.name, 'version-bump')
+        if: !contains(github.event.pull_request.labels.*.name, 'version-bump')
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
