--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ on:
 
 jobs:
   tests:
+    permissions:
+      actions: write
     runs-on: ubuntu-latest
 #    if: !contains(github.event.pull_request.labels, "version-bump")
     strategy:
@@ -21,21 +23,30 @@ jobs:
           - '3.10'
           - '3.11'
     steps:
+      - name: Skip tests
+        env:
+          IS_SKIP: ${{ !contains(github.event.pull_request.labels.*.name, 'version-bump') }}
+        run:
+          if ${IS_SKIP} == true; then
+            echo "is_skip=true" >> $GITHUB_ENV
+            echo "tests will be skipped"
+          else
+            echo "is_skip=false" >> $GITHUB_ENV
+            echo "tests will not be skipped"
+          fi
+
+      - name: Exit if version bump
+        run: |
+          gh run cancel ${{ github.run_id }}
+          gh run watch ${{ github.run_id }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Checkout
         uses: actions/checkout@v3
 
 #      - name: Unshallow
 #        run: git fetch --prune --unshallow
-
-      - env:
-          EVENT_CONTEXT: ${{ toJSON(github.event) }}
-        run: |
-          echo $EVENT_CONTEXT
-
-      - env:
-          EVENT_CONTEXT: ${{ toJSON(github.event.pull_request.labels.*.name) }}
-        run: |
-          echo $EVENT_CONTEXT
 
       - uses: actions/setup-python@v4
         with:
@@ -43,7 +54,6 @@ jobs:
 
       - name: Run tests
         run: make dev test
-        if: "!contains(github.event.pull_request.labels.*.name, 'version-bump')"
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
