Test release workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
         with:
           python-version: ${{ matrix.pyVersion }}
 
+      - name: Check condition
+        run: echo "{{env.run_tests && success()}}"
+
       - name: Run tests
         if: env.run_tests && success()
         run: make dev test
