Test release workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,11 @@ jobs:
         with:
           python-version: ${{ matrix.pyVersion }}
 
-      - name: Check condition
-        run: echo ${{ env.run_tests }} && success()
+      - name: Check run_tests
+        run: echo ${{ env.run_tests }}
+
+      - name: Check success
+        run: echo success()
 
       - name: Run tests
         if: env.run_tests && success()
