--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,17 +20,32 @@ jobs:
           - '3.10'
           - '3.11'
     steps:
+      - name: Check if run tests
+        env:
+          VERSION_BUMP: ${{ contains(github.event.pull_request.labels.*.name, 'version-bump') }}
+        run: |
+          if ${VERSION_BUMP} == true; then
+            echo "run_tests=false" >> $GITHUB_ENV
+            echo "tests will be skipped"
+          else
+            echo "run_tests=true" >> $GITHUB_ENV
+            echo "tests will be run"
+          fi
+
       - name: Checkout
+        if: ${{ env.run_tests == 'true' && success()}}
         uses: actions/checkout@v3
 
 #      - name: Unshallow
 #        run: git fetch --prune --unshallow
 
       - uses: actions/setup-python@v4
+        if: ${{ env.run_tests == 'true' && success()}}
         with:
           python-version: ${{ matrix.pyVersion }}
 
       - name: Run tests
+        if: ${{ env.run_tests == 'true' && success()}}
         run: make dev test
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
