--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,15 +7,9 @@ on:
       default: 'info'
     branches:
       - main
-#  pull_request:
-#    types:
-#      - closed
-#    branches:
-#      - main
 
 jobs:
   publish:
-#    if: ${{ github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'release') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -25,15 +19,15 @@ jobs:
         with:
           python-version: "3.10"
 
-#      - name: Build and publish laktory to pypi
-#        run: make publish
-#        env:
-#          FLIT_INDEX_URL: ${{ vars.FLIT_INDEX_URL }}
-#          FLIT_USERNAME: ${{ vars.FLIT_USERNAME }}
-#          FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
-#          TWINE_REPOSITORY_URL: ${{ vars.TWINE_REPOSITORY_URL }}
-#          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
-#          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+      - name: Build and publish laktory to pypi
+        run: make publish
+        env:
+          FLIT_INDEX_URL: ${{ vars.FLIT_INDEX_URL }}
+          FLIT_USERNAME: ${{ vars.FLIT_USERNAME }}
+          FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
+          TWINE_REPOSITORY_URL: ${{ vars.TWINE_REPOSITORY_URL }}
+          TWINE_USERNAME: ${{ vars.TWINE_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
 
   tag:
     permissions:
@@ -59,10 +53,10 @@ jobs:
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-        run: git tag test-v${{ steps.get_version.outputs.version }}
+        run: git tag v${{ steps.get_version.outputs.version }}
 
       - name: Push release tag
-        run: git push origin test-v${{ steps.get_version.outputs.version }}
+        run: git push origin v${{ steps.get_version.outputs.version }}
 
 
   bump:
@@ -77,19 +71,7 @@ jobs:
 
       - name: Bump version
         id: bump_version
-        run: |
-          import os
-          from packaging import version
-          with open("./laktory/_version.py") as fp:
-            v0 = fp.read().split("=")[-1].strip().replace('"', '')
-            v0 = version.parse(v0)
-            v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
-          with open("./laktory/_version.py", "w") as fp:
-            fp.write(f'VERSION = "{v0}" # test2')
-          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-            print(f"version={str(v1)}", file=fp)
-          print(f"Bumping laktory to {v1}")
-        shell: python
+        run: python ./.github/scripts/bump_version.py
 
       - name: Set up Git
         run: git config --global user.email "okubot@okube.ai" && git config --global user.name "okube-git-bot"
@@ -98,6 +80,7 @@ jobs:
         run: |
           git checkout -b version-bump-v${{ steps.bump_version.outputs.version }}
           git add ./laktory/_version.py
+          git add ./CHANGELOG.md
           git commit -m "version bump"
 
       - name: Push changes
@@ -109,7 +92,7 @@ jobs:
       # other workflows.
       # TODO: Setup git user for specifically creating PR
       - name: Create pull request
-        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "version-bump-${{ steps.bump_version.outputs.version }}" --body "Automated version bump"
+        run: gh pr create --base main --head version-bump-v${{ steps.bump_version.outputs.version }} --title "version-bump-${{ steps.bump_version.outputs.version }}" --body "Automated version bump" --label version-bump
         env:
           GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
 
@@ -118,7 +101,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # TODO: Review why branch is not deleted
       - name: Merge pull request
         run: gh pr merge --auto --squash --delete-branch
         env:
-          GH_TOKEN: ${{ secrets.GIT_ACTIONS_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
